--- a/cleaning A and E.Rmd
+++ b/cleaning A and E.Rmd
@@ -10,6 +10,7 @@ output:
       theme: journal
       toc: yes
       toc_float: yes
+bibliography: bibliography.bib
 ---
 
 ```{r setup, include=FALSE}
@@ -22,15 +23,19 @@ knitr::opts_chunk$set(echo = TRUE,
 
 
 
-Put intro and lit here:
 
 The LATE theorem is a cornerstone of identification in economics and labour economists in particular have popularised and preached its virtues. Considering the theorem's importance relatively little effort has been expended ensuring the theorem's assumptions are met in the dataset in question. This paper aims to promote a practical methodology that can be incorporated into current 2SLS workflow which can clearly aid researchers in verifying that necessary, but not sufficient, conditions are met empirically in the sample.  
 
+# The LATE Theorem
 
+TODO: MHE LATE theorem expo
+
+The LATE theorem [@Angrist_Imbens] describes four key assumptions under which instrumental variables regression will identify a causal effect for a specific subpopulation, "compliers", in the presence of heterogeneous effects. These assumptions are known as:
+
+- Independence
 
 # Data and Replication
 
-Describe data used and data collecting methodology here
 
 ## Angrist and Evans 1998
 
@@ -622,7 +627,7 @@ rm(SEs_IV_4,
 
 # Checking First Stage
 
-Write up about methodology.
+
 
 ## Simulations
 
@@ -676,7 +681,6 @@ find_SEs <- function(model_data_no_y, model_vcov, instrument){
   
   gradient_matrix_kinda <- model_matrix %>%
     as_tibble() %>% 
-    distinct() %>% 
   mutate_at(vars(-contains(":")), ~(. = 0)) %>% 
     mutate(instrument = 1) %>% 
   as.matrix()
@@ -1283,6 +1287,78 @@ tau_hat_results_maimonides %>%
 ```
 
 ## Autor Dorn Hansen
+```{r ADH_rf}
+
+ADH_matrix <- df_china %>% 
+  select(d_sh_empl_mfg,
+         l_shind_manuf_cbp,
+         starts_with("reg"),
+         l_sh_popedu_c,
+         l_sh_popfborn,
+         l_sh_empl_f,
+         l_sh_routine33,
+         l_task_outsource,
+         t2) %>% 
+  as.matrix()
+
+
+
+forest_first_stage_ADH <- causal_forest(X = ADH_matrix,
+                                        Y = df_china$d_tradeusch_pw,
+                                        W = df_china$d_tradeotch_pw_lag,
+                                        num.trees = 4000)
+
+tau_hat_oob_ADH <- predict(forest_first_stage_maim_5, estimate.variance = TRUE) %>%
+  as_tibble() %>% 
+  mutate(dataset = "Fifth Grade")
+
+```
+
+
+
+
+
+
+```{r ADH_rf_plot}
+
+ggplot(tau_hat_oob_ADH,
+       aes(x = predictions)) +
+  geom_histogram()
+
+tau_hat_results_ADH <- tau_hat_oob_ADH %>%
+  arrange(predictions) %>% 
+  mutate(sigma_hat = sqrt(variance.estimates),
+         prediction_lo = predictions - 1.96*sigma_hat,
+         prediction_hi = predictions + 1.96*sigma_hat,
+         t_stat = predictions / sigma_hat,
+         critical_value = qt(0.95, N_obs - 13, lower.tail = FALSE),
+         pval = pt(t_stat, df = N_obs - 13),
+         pval_holm = p.adjust(pval, method = "holm"),
+         reject_H0 = ifelse(pval_holm < 0.05, 1, 0),
+         rank = row_number())
+
+tau_hat_results_ADH %>% 
+  ggplot(aes(x = rank, y = predictions, ymin = prediction_lo, ymax = prediction_hi)) + 
+  geom_point() +
+  geom_ribbon(alpha = 0.1) +
+  theme_minimal() +
+  geom_hline(yintercept = 0, linetype = "longdash")
+
+tau_hat_results_ADH %>% 
+  filter(reject_H0 == 1) 
+
+
+tau_hat_results_ADH %>% 
+  ggplot(aes(sample = pval)) +
+  stat_qq(distribution = qunif)  +
+  geom_abline(intercept = 0, slope = 1) +
+  theme_minimal() +
+  scale_x_continuous(trans=negative_log_trans(10)) +
+  scale_y_continuous(trans=negative_log_trans(10)) +
+  geom_hline(yintercept = 0.05, linetype = "longdash", alpha = 0.2) +
+  labs(title = "QQ plot of P-values",
+       subtitle = "Negative Log(10) Scale")
+```
 
 
 # Bayesian Test
@@ -1294,3 +1370,5 @@ write up on bayesian test
 ## Autor Dorn Hansen
 
 # Conclusion
+
+# References
